Bug 440112, Form elements are not hidden behind overlapping parent with overflow:hidden, r+sr=roc